# TinyTerminalRomManager

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENCE  README.md  build.bat  build.sh  install.sh  run.bat  run.sh
inc/: config.h  constants.h  logging.h  main.h  search.h  structs.h  utils.h  vecview.h  window.h
res/: resource.rc
src/: config.cpp  logging.cpp  main.cpp  search.cpp  utils.cpp  window.cpp
